[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enemy/Battle/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shaders/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Battle/Battle.gd" type="Script" id=5]
[ext_resource path="res://Assets/Player/PlayerStats.gd" type="Script" id=6]
[ext_resource path="res://Assets/Player/StatsPanel.gd" type="Script" id=7]
[ext_resource path="res://Button9Frame.tres" type="StyleBox" id=9]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Battle/BattleActionButtons.gd" type="Script" id=12]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Battle" type="Node"]
script = ExtResource( 5 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 112, 70.5 )
scale = Vector2( 2.48889, 0.86875 )
texture = ExtResource( 10 )

[node name="EnemyPostion" type="Position2D" parent="."]
position = Vector2( 113, 38 )

[node name="Enemy" parent="EnemyPostion" instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_top = 138.0
margin_right = 147.0
margin_bottom = 164.0
rect_scale = Vector2( 1.52878, 1.21782 )
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 22.0
custom_constants/line_separation = 3
custom_styles/normal = SubResource( 2 )
scroll_active = false

[node name="StatsPanel" type="Panel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -11.5
margin_right = 42.0
margin_bottom = 11.5
custom_styles/panel = ExtResource( 9 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 83.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 28.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 57.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 1.0
margin_top = 98.0
margin_right = 224.0
margin_bottom = 137.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 5
script = ExtResource( 12 )

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = 7.5
margin_right = 35.0
margin_bottom = 46.5
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_top = 13.0
margin_right = 70.0
margin_bottom = 26.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="Transition" parent="." instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
