[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://Button9Frame.tres" type="StyleBox" id=5]
[ext_resource path="res://PlayerStats.gd" type="Script" id=6]
[ext_resource path="res://StatsPanel.gd" type="Script" id=7]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=9]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80.5 )
scale = Vector2( 1, 0.99375 )
texture = ExtResource( 3 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.184314 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 45.5514, 32.0362 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_top = 137.0
margin_right = 90.0
margin_bottom = 160.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 83.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 28.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 57.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 82.0
margin_bottom = 135.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_left = 40.0
margin_right = 72.0
[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]

[editable path="Enemy"]
